--- a/Notebooks/Data preparation.ipynb
+++ b/Notebooks/Data preparation.ipynb
@@ -77,7 +77,7 @@
    "execution_count": 2,
    "id": "8e419f17",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -209,6 +209,14 @@
     "# Print the merged DataFrame\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0675528",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
