adjust summary file

--- a/Notebooks/LSTM - Summary results.ipynb
+++ b/Notebooks/LSTM - Summary results.ipynb
@@ -33,6 +33,8 @@
     "* Number of neurons [50, 100, 150, 200]\n",
     "* Learning rate [0.1, 0.01, 0.001]\n",
     "\n",
+    "The final results in below tabel:\n",
+    "\n",
     "\n",
     "| Hyperparameter   | Microsoft | Apple | Tesla | Google | Amazon | Facebook |\n",
     "|------------------|-----------|-------|-------|--------|--------|----------|\n",
