changed MAE and RMSE to calculate on back-transformed data

--- a/Notebooks/XGBoost_AAPL.ipynb
+++ b/Notebooks/XGBoost_AAPL.ipynb
@@ -1028,8 +1028,9 @@
     "\n",
     "predictions = main_model.predict(X_test)\n",
     "\n",
-    "mae = str(mean_absolute_error(y_test, predictions))\n",
-    "rmse = str(np.sqrt(mean_squared_error(y_test, predictions)))\n"
+    "\n",
+    "#mae = str(mean_absolute_error(y_test, predictions))\n",
+    "#rmse = str(np.sqrt(mean_squared_error(y_test, predictions)))\n"
    ]
   },
   {
@@ -1075,6 +1076,18 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MAE and RMSE on back-transformed data\n",
+    "\n",
+    "mae = str(mean_absolute_error(original_ytest, test_predict))\n",
+    "rmse = str(np.sqrt(mean_squared_error(original_ytest, test_predict)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1091,8 +1104,8 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "Mean Absolute Error - MAE : 0.043207204412718844\n",
-      "Root Mean Squared Error - RMSE : 0.058186261918006604\n"
+      "Mean Absolute Error - MAE : 3.7619434054054883\n",
+      "Root Mean Squared Error - RMSE : 5.0661327165140015\n"
      ]
     }
    ],
