--- a/Notebooks/XGBoost_TSLA.ipynb
+++ b/Notebooks/XGBoost_TSLA.ipynb
@@ -1028,8 +1028,8 @@
     "\n",
     "predictions = main_model.predict(X_test)\n",
     "\n",
-    "mae = str(mean_absolute_error(y_test, predictions))\n",
-    "rmse = str(np.sqrt(mean_squared_error(y_test, predictions)))\n"
+    "#mae = str(mean_absolute_error(y_test, predictions))\n",
+    "#rmse = str(np.sqrt(mean_squared_error(y_test, predictions)))\n"
    ]
   },
   {
@@ -1075,6 +1075,18 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MAE and RMSE on back-transformed data\n",
+    "\n",
+    "mae = str(mean_absolute_error(original_ytest, test_predict))\n",
+    "rmse = str(np.sqrt(mean_squared_error(original_ytest, test_predict)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1091,8 +1103,8 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "Mean Absolute Error - MAE : 0.0278239221796199\n",
-      "Root Mean Squared Error - RMSE : 0.03826488986480601\n"
+      "Mean Absolute Error - MAE : 22.56091614044689\n",
+      "Root Mean Squared Error - RMSE : 31.02693196102668\n"
      ]
     }
    ],
