adding loop to last value

--- a/Notebooks/lastValue.ipynb
+++ b/Notebooks/lastValue.ipynb
@@ -62,8 +62,11 @@
    "source": [
     "# Create a function to calculate the last value model predictions\n",
     "def last_value_model(train, test):\n",
+    "    predictions = pd.DataFrame(index=test.index, columns=test.columns)\n",
     "    last_values = train.iloc[-1]\n",
-    "    predictions = pd.DataFrame(np.tile(last_values.values, (len(test), 1)), index=test.index, columns=test.columns)\n",
+    "    for date in test.index:\n",
+    "        predictions.loc[date] = last_values\n",
+    "        last_values = test.loc[date]  # Update last values with actual test values\n",
     "    return predictions\n",
     "\n",
     "# Generate predictions\n",
