--- a/Notebooks/LSTM - Summary results.ipynb
+++ b/Notebooks/LSTM - Summary results.ipynb
@@ -21,7 +21,7 @@
    "id": "3c930c69",
    "metadata": {},
    "source": [
-    "The original paper does not mention about final model hyperparameter. The final models are selected for our reproduce stock predictions with following detail:\n",
+    "LSTM models include many hyperparameters that can be refined to improve forecast performance. However, the original article does not mention the final model hyperparameters selected. Therefore, we decided to reproduce the stock predictions with the following detailed hyperparameter selection:\n",
     "\n",
     "Fixed hyperparameter:\n",
     "* time_step: 40\n",
@@ -77,6 +77,14 @@
     "| Difference   | 2.9693    | 5.1154 | (117.1521)| 12.6970 | (12.3657)| 2.9858   |\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f93b459d-682a-49ea-894b-5387df960700",
+   "metadata": {},
+   "source": [
+    "The results show that the forecasting errors are notably high, particularly for Tesla and Amazon. This could be due to the absence of a walk-forward process to re-train the model with new available data. Consequently, a model trained only once on the training data might not adequately capture emerging patterns in the new data of the test set, especially in cases of significant changes between the training and test periods, such as with Tesla"
+   ]
   }
  ],
  "metadata": {
@@ -95,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
