--- a/Notebooks/lastValue.ipynb
+++ b/Notebooks/lastValue.ipynb
@@ -32,8 +32,8 @@
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "\n",
     "# Load the training and test data\n",
-    "train_data = pd.read_csv('data/train.csv', index_col='Date', parse_dates=True)\n",
-    "test_data = pd.read_csv('data/test.csv', index_col='Date', parse_dates=True)\n",
+    "train_data = pd.read_csv('../Data/Data train-test/train.csv', index_col='Date', parse_dates=True)\n",
+    "test_data = pd.read_csv('../Data/Data train-test/test.csv', index_col='Date', parse_dates=True)\n",
     "\n",
     "# Ensure the index is in the correct datetime format\n",
     "train_data.index = pd.to_datetime(train_data.index)\n",
