add comment on LSTM and results files

--- a/Notebooks/LSTM - Summary results.ipynb
+++ b/Notebooks/LSTM - Summary results.ipynb
@@ -23,13 +23,13 @@
    "source": [
     "LSTM models include many hyperparameters that can be refined to improve forecast performance. However, the original article does not mention the final model hyperparameters selected. Therefore, we decided to reproduce the stock predictions with the following detailed hyperparameter selection:\n",
     "\n",
-    "Fixed hyperparameter:\n",
+    "Fixed hyperparameters:\n",
     "* time_step: 40\n",
     "* Number of LSTM layers: 2\n",
     "* Batch size: 32\n",
     "* Epochs: 100\n",
     "\n",
-    "Hyperparameter tuning using Keras tuner random search with following search space and results:\n",
+    "Hyperparameter tuning using Keras tuner random search with following search space:\n",
     "* Number of neurons [50, 100, 150, 200]\n",
     "* Learning rate [0.1, 0.01, 0.001]\n",
     "\n",
@@ -84,6 +84,26 @@
    "metadata": {},
    "source": [
     "The results show that the forecasting errors are notably high, particularly for Tesla and Amazon. This could be due to the absence of a walk-forward process to re-train the model with new available data. Consequently, a model trained only once on the training data might not adequately capture emerging patterns in the new data of the test set, especially in cases of significant changes between the training and test periods, such as with Tesla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66f1828f-e140-4e33-a9f9-f8757967b434",
+   "metadata": {},
+   "source": [
+    "<div align=\"left\">\n",
+    "<img src=\"../Images/Data - Tesla.png\" width=\"750\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1de2dc1e-365d-4c77-9d6f-85d9f1205d73",
+   "metadata": {},
+   "source": [
+    "<div align=\"left\">\n",
+    "<img src=\"../Images/Prediction - Tesla.png\" width=\"750\">\n",
+    "</div>"
    ]
   }
  ],
