--- a/Notebooks/results_consolidation.ipynb
+++ b/Notebooks/results_consolidation.ipynb
@@ -2,6 +2,65 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "91778b6e-3214-4fa4-b2ed-a3bbc5f867a9",
+   "metadata": {},
+   "source": [
+    "# Stock Price Forecasting in Presence of Covid-19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "379d6594-9e5b-4617-88a3-d08e820b6cc2",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf20a5b3-41a2-4710-9e4f-477d5f6d4252",
+   "metadata": {},
+   "source": [
+    "The study focuses on forecasting stock prices (Microsoft, Apple, Google, Facebook, Tesla and Amazon) amidst the heightened volatility caused by the COVID-19 pandemic using various models:\n",
+    "\n",
+    "* Autoregression Mode\n",
+    "* LSTM\n",
+    "* XGBoost\n",
+    "* Last Value Model\n",
+    "\n",
+    "They concluded that Autoregression and Last Value models outperformed machine learning models LSTM and XGBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b3d3206-7fe2-49cd-ad5d-e5b1ae32878c",
+   "metadata": {},
+   "source": [
+    "## Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09910b2f-c861-4429-8015-7f8a7753e6ba",
+   "metadata": {},
+   "source": [
+    "Our reproduced results show that:\n",
+    "* Autoregression and Last Value models outperformed machine learning models LSTM and XGBoost\n",
+    "* Autoregression and XGBoost results are quite similar to the original article\n",
+    "* LSTM performed better than the original article for Microsoft, Apple, Google, and Facebook; however, it performed worse for Tesla and Amazon\n",
+    "* Last Value model performed better than the original article, especially for Amazon, Tesla, and Google"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c7a8df2-d329-43ac-8859-c3b19597dd72",
+   "metadata": {},
+   "source": [
+    "#### Detail performance metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "00e91584",
    "metadata": {},
    "source": [
@@ -24,12 +83,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb170ab2",
+   "cell_type": "markdown",
+   "id": "2372a00d-585f-4e4c-9c7f-75ed6e28b8cd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Problem encountered"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65cafde2-8857-4475-b8a3-d928293a0e50",
+   "metadata": {},
+   "source": [
+    "1. The original article does not clearly mention the methodology and final selected model hyperparameters. Therefore, it is difficult for us to replicate, especially for complex models with many hyperparameters like LSTM and XGBoost\n",
+    "\n",
+    "2. Simple models, such as Autoregression and Last Value, outperformed complex machine learning models like LSTM and XGBoost. This may be because while AR and Last Value models perform rolling forecasts, which always use new available data to re-train the models, LSTM and XGBoost only train the model once with the training data to make predictions.\\\n",
+    "   => Solution: Performing a walk-forward procedure, which re-trains models with new available data, may improve the performance of LSTM and XGBoost models."
+   ]
   }
  ],
  "metadata": {
@@ -49,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
